# DoNotDisturb

./: .env.example  .gitignore  LICENSE  README.md  database.sql  docker-compose-le.yml  docker-compose.yml
.github/workflows/: backend-cd-dev.yml  backend-cd.yml  backend-ci.yml  backend.yml  frontend-cd-dev.yml  frontend-cd.yml  frontend-ci.yml  frontend.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: Controller.py  main.py  models.py  schemas.py
backend/app/controllers/: TokenController.py  TransactionController.py  UserController.py  __init__.py
backend/app/database/: __init__.py
backend/app/models/: Transaction.py  TransactionType.py  User.py  UserView.py  __init__.py
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js
frontend/src/i18n/: en.json  index.ts  ru.json
frontend/src/lib/: FetchStatus.svelte  Loader.svelte  Menu.svelte  MenuButton.svelte  Notifications.svelte  PasswordInput.svelte  Transaction.svelte  UserAvatar.svelte  UserSelect.svelte  api.ts  config.ts  i18n.ts  notification.ts  storage.ts  store.ts  translations.ts  user.ts
frontend/src/pages/: Home.svelte  Login.svelte  Profile.svelte  Register.svelte  Reward.svelte  Team.svelte  Transactions.svelte
frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte
frontend/src/routes/[team]/: +page.svelte
frontend/src/routes/create/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/password/: +page.svelte
nginx/: Dockerfile
nginx/config/: nginx.conf  nginx.conf.local
(+8 files in other folders)
